<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/resultLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/historyResult4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/historyResult3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/historyResult2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/historyResult1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Buffer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="60sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/resultFieldTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="60sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultLayout"
        app:layout_constraintVertical_bias="0.92">

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/commandButtonColor"
            android:text="@string/clear"
            android:onClick="onClick"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonSeven"
            app:layout_constraintEnd_toStartOf="@+id/buttonSign"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/commandButtonColor"
            android:text="@string/sign"
            android:onClick="onClick"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonEight"
            app:layout_constraintEnd_toStartOf="@+id/buttonPercent"
            app:layout_constraintStart_toEndOf="@+id/buttonClear"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/commandButtonColor"
            android:text="@string/percent"
            android:onClick="onClick"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonNine"
            app:layout_constraintEnd_toStartOf="@+id/buttonDivision"
            app:layout_constraintStart_toEndOf="@+id/buttonSign"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonDivision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/actionButtonColor"
            android:text="@string/division"
            android:onClick="onClick"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonMultiplication"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonPercent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonSeven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/numberButton"
            android:text="@string/seven"
            android:onClick="onClick"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonFour"
            app:layout_constraintEnd_toStartOf="@+id/buttonEight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

        <Button
            android:id="@+id/buttonEight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/numberButton"
            android:text="@string/eight"
            android:onClick="onClick"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonFive"
            app:layout_constraintEnd_toStartOf="@+id/buttonNine"
            app:layout_constraintStart_toEndOf="@+id/buttonSeven"
            app:layout_constraintTop_toBottomOf="@+id/buttonSign" />

        <Button
            android:id="@+id/buttonNine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/numberButton"
            android:text="@string/nine"
            android:onClick="onClick"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonSix"
            app:layout_constraintEnd_toStartOf="@+id/buttonMultiplication"
            app:layout_constraintStart_toEndOf="@+id/buttonEight"
            app:layout_constraintTop_toBottomOf="@+id/buttonPercent" />

        <Button
            android:id="@+id/buttonMultiplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/actionButtonColor"
            android:text="@string/multiplication"
            android:onClick="onClick"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonMinus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonNine"
            app:layout_constraintTop_toBottomOf="@+id/buttonDivision" />

        <Button
            android:id="@+id/buttonFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/numberButton"
            android:text="@string/four"
            android:onClick="onClick"
            android:textSize="40sp"
            app:layout_constraintEnd_toStartOf="@+id/buttonFive"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSeven" />

        <Button
            android:id="@+id/buttonFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/numberButton"
            android:text="@string/five"
            android:onClick="onClick"
            android:textSize="40sp"
            app:layout_constraintEnd_toStartOf="@+id/buttonSix"
            app:layout_constraintStart_toEndOf="@+id/buttonFour"
            app:layout_constraintTop_toBottomOf="@+id/buttonEight" />

        <Button
            android:id="@+id/buttonSix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/numberButton"
            android:text="@string/six"
            android:onClick="onClick"
            android:textSize="40sp"
            app:layout_constraintEnd_toStartOf="@+id/buttonMinus"
            app:layout_constraintStart_toEndOf="@+id/buttonFive"
            app:layout_constraintTop_toBottomOf="@+id/buttonNine" />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/actionButtonColor"
            android:text="@string/minus"
            android:onClick="onClick"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonSix"
            app:layout_constraintTop_toBottomOf="@+id/buttonMultiplication" />

        <Button
            android:id="@+id/buttonOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/numberButton"
            android:text="@string/one"
            android:onClick="onClick"
            android:textSize="40sp"
            app:layout_constraintEnd_toStartOf="@+id/buttonTwo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonFour" />

        <Button
            android:id="@+id/buttonTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/numberButton"
            android:text="@string/two"
            android:onClick="onClick"
            android:textSize="40sp"
            app:layout_constraintEnd_toStartOf="@+id/buttonThree"
            app:layout_constraintStart_toEndOf="@+id/buttonOne"
            app:layout_constraintTop_toBottomOf="@+id/buttonFive" />

        <Button
            android:id="@+id/buttonThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/numberButton"
            android:text="@string/three"
            android:onClick="onClick"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonDecimalPlace"
            app:layout_constraintEnd_toStartOf="@+id/buttonPlus"
            app:layout_constraintStart_toEndOf="@+id/buttonTwo"
            app:layout_constraintTop_toBottomOf="@+id/buttonSix"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/actionButtonColor"
            android:text="@string/plus"
            android:onClick="onClick"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonThree"
            app:layout_constraintTop_toBottomOf="@+id/buttonMinus" />

        <Button
            android:id="@+id/buttonZero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/numberButton"
            android:text="@string/zero"
            android:onClick="onClick"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonDecimalPlace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonOne" />

        <Button
            android:id="@+id/buttonDecimalPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="1dp"
            android:backgroundTint="@color/numberButton"
            android:text="@string/decimalPlace"
            android:onClick="onClick"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonEquals"
            app:layout_constraintStart_toEndOf="@+id/buttonZero"
            app:layout_constraintTop_toBottomOf="@+id/buttonThree" />

        <Button
            android:id="@+id/buttonEquals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/actionButtonColor"
            android:text="@string/equals"
            android:onClick="onClick"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonDecimalPlace"
            app:layout_constraintTop_toBottomOf="@+id/buttonPlus" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>